--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .intro
 {
     display: inline-block;
-    margin-right: -10px !important;
+    /* margin-right: -10px !important; */
 }
 .ch
 {
